<resources>
    <string name="app_name">BookReader</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Xu Zhiyong</string>
    <string name="nav_header_subtitle">13980668829@163.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_quit">Quit</string>
    <string name="action_add">Add</string>
    <string name="action_search">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_about">About</string>

    <!-- Button labels -->
    <string name="clear">Clear</string>


    <!-- Output to TextView styled with a little HTML -->
    <string name="head"><![CDATA[<h3>BOOK INFORMATION:</h3>]]></string>
    <string name="title"><![CDATA[<b>Title:</b>]]></string>
    <string name="author"><![CDATA[<b>Author:</b>]]></string>
    <string name="desc"><![CDATA[<b>Description:</b>]]></string>
    <string name="header_text">Book List</string>
    <string name="image_description">TODO</string>

    <string name="about_fruit">Mango</string>
    <string name="about_description_bullets">
    Mangoes are juicy stone fruit(drupe) from numerous species of tropical trees belonging to the flowering plant genus Mangifera, cultivated mostly for their edible fruit.
The majority of these species are found in nature as wild mangoes. The genus belongs to the cashew family Anacardiaceae.
        Mangoes are native to South Asia, from where the "common mango" or "Indian mango", Mangifera indica, has been distributed worldwide tobecome one of the most widely cultivated fruits in the tropics. Other Mangifera species(e.g. horse mango, Mangifera foetida) are grown on a more localized basis.
It is the national fruit of India, Pakistan, and the Philippines, and the national tree of Bangladesh.
(From Wikipedia)
    </string>

    <string name="RefreshMessage">Refresh the list.</string>
    <string name="SettingMessage">Setting will be open.</string>
    <string name="AddNewBookMessage">New book is added into library.</string>
    <string name="loading_books_error">Error while loading books</string>
    <string name="AddNewNoteMessage">New note is added into gallery.</string>

    <string name="SearchHint">Search</string>

    <!-- Preference Titles -->
    <string name="font_header">Display</string>
    <string name="style_header">Theme</string>

    <!-- Display Preferences -->
    <string name="font_family">Font family</string>
    <string name="font_size">Font size</string>
    <string name="color_mode_title">Colors</string>
    <string name="default_value">Default</string>

    <!-- Theme Preferences -->
    <string name="theme_key">theme</string>
    <string name="theme_title">Night Light</string>

    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="no_data">No Data</string>
    <string name="textdemo">Demo for textView</string>
</resources>