<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/style_header">

        <SwitchPreferenceCompat
            app:key="@string/theme_key"
            app:title="@string/theme_title" />

        <SwitchPreferenceCompat
            app:dependency="theme"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>


    <PreferenceCategory app:title="@string/font_header">
        <ListPreference
            app:entries="@array/font_entries"
            app:entryValues="@array/font_values"
            app:key="font_family"
            app:title="@string/font_family"
            app:defaultValue="宋体"/>

        <EditTextPreference
            app:key="font_size"
            app:title="@string/font_size"
            app:defaultValue = "@string/default_value"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="normal"
            app:entries="@array/color_entries"
            app:entryValues="@array/color_values"
            app:key="color"
            app:title="@string/color_mode_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
</PreferenceScreen>