<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.focus617.bookreader.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_detail"
            app:destination="@id/nav_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.focus617.bookreader.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.focus617.bookreader.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.focus617.bookreader.ui.settings.SettingsFragment"
        android:label="@string/menu_setting"
        tools:layout="@xml/fragment_settings"/>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.focus617.bookreader.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about"/>

    <fragment
        android:id="@+id/nav_detail"
        android:name="com.focus617.bookreader.ui.bookdetail.BookDetailFragment"
        android:label="Book Detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="selectedBook"
            app:argType="com.focus617.core.domain.Book" />
    </fragment>

</navigation>